<resources>
    <string name="app_name">calculator</string>
    <string name="init">0</string>
    <string name="calc">计算</string>
    <string name="trans">换算</string>
    <string name="tax">税贷</string>
    <string name="clean">AC</string>
    <string name="delete">X</string>
    <string name="mod">%</string>
    <string name="residual">÷</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multi">*</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="sub">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="push">+</string>
    <string name="none"> </string>
    <string name="zero">0</string>
    <string name="point">.</string>
    <string name="equal">=</string>
</resources>